# python-project-lvl2

./: .coverage  Makefile  README.md  pyproject.toml
gendiff/scripts/: gendiff.py  generate_diff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: filepath1.yml  filetest1.json  filetest2.json
