[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = ""
authors = ["Vlad-Home <bilinvlad@gmail.com>"]
packages = [
	{ include = "gendiff" },
]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
